Changes in *next version*:
 * Add --export-option parameter for command line exporting control
 * Add templates in preferences for exported file names and add %PAGENUM00% and
   %PAGENUM000% options for zero-prefixed page numbers.

Changes in 2.2.2:
 * Fix zoom for polar, ternary and broken axis plots
 * For mean and add dataset operations, allow datasets to be different
   lengths, expanding to the maximum
 * Fix broken axis if the ends of the axis are not the edge of the plot
 * Fix image embedding in Python 3
 * Update h5py to newer version in Windows binary (supporting HDF 1.10.1)
 * Fix 'fractions' and 'percentages' units in polar plot
 * Add LANG(mapping) function when evaluating labels, allowing translation
   of strings in documents

Changes in 2.2.1:
 * Fix mouse control for Key widget for different zoom levels
 * Correct coordinates shown on bottom of screen for different zoom levels
 * Fix zoom into graph functionality for different zoom levels
 * Fix plot picking for different zoom levels
 * When choosing a text dataset, fix the mini dataset browser
 * Fix crash when previewing in binary import using Python 3
 * Fix crash when picking points in certain circumstances

Changes in 2.2:
 * Notify user updates to Veusz are available
 * Add support for high DPI displays
 * Change zoom code scale plots, rather than changing the size of elements,
   so that plots look more similar at different zoom levels
 * Send automatic anonymous feedback to developers giving software version
   information and counts of the features used.
 * Fix colormap sequence and randomize plugins
 * Change hyphen to minus sign when using standard C formatting in tick labels
 * Fix for Chinese and Korean characters in filenames on Windows
 * Sort DatasetPlugin arguments for diffing
 * Fix bitmap EMF export in Python 3
 * The redo operation can now be done multiple times
 * Hide fully transparent objects, rather than trying to draw them
 * Fix bug report script in Python 3