@@ -26,7 +26,7 @@
      <item>
       <widget class="QLineEdit" name="editFileName">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Name of file to export. When exporting multiple pages to multiple files %PAGENUM% is the number of the page and %PAGENAME% is the name of the page. %PAGENUM00% and %PAGENUM000% are the page numbers prefixed with zeros to make two or three characters.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Name of file to export. When exporting multiple pages to multiple files %PAGE% is the number of the page and %PAGENAME% is the name of the page. %PAGE00% and %PAGE000% are the page numbers prefixed with zeros to make two or three characters.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -46,49 +46,51 @@
        <property name="title">
         <string>Pages</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <item row="0" column="0">
          <widget class="QRadioButton" name="radioPageSingle">
           <property name="toolTip">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Export the current page&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
-           <string>Single</string>
+           <string>S&amp;ingle</string>
           </property>
          </widget>
         </item>
-        <item>
+        <item row="1" column="0">
          <widget class="QRadioButton" name="radioPageAll">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Export all pages&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
-           <string>All</string>
+           <string>A&amp;ll</string>
           </property>
          </widget>
         </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <widget class="QRadioButton" name="radioPageRange">
-            <property name="text">
-             <string>Range</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="pageRangeMin"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>to</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="pageRangeMax"/>
-          </item>
-         </layout>
+        <item row="2" column="0">
+         <widget class="QRadioButton" name="radioPagePages">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Export given pages&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>P&amp;ages</string>
+          </property>
+         </widget>
         </item>
-        <item>
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="editPagePages">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter a comma-separated list of pages or page ranges (e.g. 1-2,4,5)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0" colspan="2">
          <widget class="QCheckBox" name="checkMultiPage">
           <property name="toolTip">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Write multiple pages to the output file, if supported by the file format&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -132,7 +134,7 @@
              <string>Single page scalable vector graphics</string>
             </property>
             <property name="text">
-             <string>SVG</string>
+             <string>SV&amp;G</string>
             </property>
            </widget>
           </item>
@@ -180,7 +182,7 @@
           <item row="0" column="0">
            <widget class="QRadioButton" name="radioFormatPNG">
             <property name="text">
-             <string>PNG</string>
+             <string>P&amp;NG</string>
             </property>
            </widget>
           </item>
@@ -201,14 +203,14 @@
           <item row="1" column="1">
            <widget class="QRadioButton" name="radioFormatTIFF">
             <property name="text">
-             <string>TIFF</string>
+             <string>&amp;TIFF</string>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
            <widget class="QRadioButton" name="radioFormatXPM">
             <property name="text">
-             <string>XPM</string>
+             <string>&amp;XPM</string>
             </property>
            </widget>
           </item>
