@@ -1,7 +1,9 @@
 Changes in *next version*:
  * Add --export-option parameter for command line exporting control
- * Add templates in preferences for exported file names and add %PAGENUM00% and
-   %PAGENUM000% options for zero-prefixed page numbers.
+ * Add templates in preferences for exported file names, add %PAGE00% and
+   %PAGE000% options for zero-prefixed page numbers, and change %PAGENUM%
+   to %PAGE%
+ * In export dialog allow user to specify arbitrary pages to export
 
 Changes in 2.2.2:
  * Fix zoom for polar, ternary and broken axis plots
